<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <Button
        android:layout_marginTop="100dp"
        android:id="@+id/btn_alpha"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/alpha_animation"/>

    <Button
        android:id="@+id/btn_scale"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/scale_animation"/>


    <Button
        android:id="@+id/btn_translate"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/translate_animation"/>

    <Button
        android:id="@+id/btn_rotate"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/rotate_animation"/>

    <Button
        android:id="@+id/btn_animation_set"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:text="@string/animation_set"/>

    <Button
        android:id="@+id/btn_property"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/property_animation"
        android:textAllCaps="false"/>

    <ImageView
        android:layout_marginTop="100dp"
        android:id="@+id/btn_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" >
    </ImageView>

</LinearLayout>