<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/test_btn_1"
        android:textAllCaps="false"
        android:textColor="@color/color_ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/test_btn_2"
        android:textAllCaps="false"
        android:textColor="@color/color_ffffff" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/start_animation_2"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="20dp"
        android:text="@string/start_animation_1"
        android:textAllCaps="false" />

</RelativeLayout>