<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_slide_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/slide_vertical"/>

    <Button
        android:id="@+id/btn_slide_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/slide_horizontal"/>

    <Button
        android:id="@+id/btn_fade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/fade"/>

</LinearLayout>